drkns 29.07.2016 01:34:39 +0200 - build 4745

1. Файловые панели зачем-то физически перечитывали свое содержимое (со всеми побочными эффектами, типа внезапной смены текущего каталога процесса) при простой перерисовке окна,
   которая, в общем случае, может произойти когда угодно. О сколько нам открытий чудных...

drkns 23.07.2016 12:48:09 +0200 - build 4744

1. Не сбрасываем цвет текста при вложенных вызовах FCTL_GETUSERSCREEN.

drkns 16.07.2016 13:51:54 +0200 - build 4743

1. Иногда, если очень повезёт, вызов редактора после работы с панельным плагином мог приводить к падению.

drkns 09.07.2016 22:56:35 +0200 - build 4742

1. Ansi-плагины, у которых ресурсы недостаточно хороши, могли не загружаться.

drkns 09.07.2016 01:21:52 +0200 - build 4741

1. И ещё один баг там же.

drkns 08.07.2016 22:07:58 +0200 - build 4740

1. Некорректная обработка backspace в local user menu.

drkns 08.07.2016 09:12:06 +0200 - build 4739

1. 0003265: Не работает "cd \ " в командной строке

drkns 06.07.2016 23:04:32 +0200 - build 4738

1. Coverity warnings.

drkns 06.07.2016 00:46:21 +0200 - build 4737

1. Рефакторинг.

drkns 03.07.2016 21:15:27 +0200 - build 4736

1. Временные файлы могли удаляться раньше времени.

drkns 03.07.2016 19:11:29 +0200 - build 4735

1. При определенных условиях мог падать поиск во вьювере.

drkns 03.07.2016 18:07:21 +0200 - build 4734

1. Рефакторинг.

drkns 02.07.2016 15:10:30 +0200 - build 4733

1. 0003261: Crash on ф: in command line

drkns 01.07.2016 01:13:59 +0200 - build 4732

1. Рефакторинг.

drkns 30.06.2016 10:25:43 +0200 - build 4731

1. Продолжение экспериментальных изменений в запускателе.

drkns 29.06.2016 21:51:02 +0200 - build 4730

1. Продолжение экспериментов:
   - вложенные вызовы FCTL_<G|S>ETUSERSCREEN можно.
   - поддержка FCTL_SETUSERSCREEN без предварительного FCTL_GETUSERSCREEN (раньше работало).

drkns 29.06.2016 09:41:59 +0200 - build 4729

1. 'Защита' от вложенных вызовов FCTL_<G|S>ETUSERSCREEN.

2. Пара мелочей.
