@@ -1,3 +1,7 @@
+zg 30.07.2016 20:43:15 +0200 - build 4746
+
+1. [Wishes 0002857]: Распознавать нажатия сочетаний нескольких модификаторов.
+
 drkns 29.07.2016 01:34:39 +0200 - build 4745
 
 1. Файловые панели зачем-то физически перечитывали свое содержимое (со всеми побочными эффектами, типа внезапной смены текущего каталога процесса) при простой перерисовке окна,
